2011-05-05  Jeremy Cribb <jcribb@email.unc.edu>
	* plot_msd.m:  added trackerID values to 'DisplayName' for each MSD curve.  Identifies each MSD curve for better traceback along analysis pipeline.

2011-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* video_msd.m:  modified the scheme for determining tau windows.  The window input parameter, when a scalar denotes the number of window sizes desired from the minimum and maximum available (with repeats filtered out).  When 'window' is a vector, the old default behavior takes over, where the vector contains the exact window sizes of tau when computing the MSD. 

2011-01.13  Jeremy Cribb <jcribb@email.unc.edu>
	* getMSDslope.m: added.  souped up way of computing alpha values that uses brian eastwoods edge_detector_1d code.  Originally Ricky Spero's code, I've tweaked it and added it here. Computing the GSER (ve.m) now uses this method.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: removed cvs diff text.
	* ve.m: same.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m:  now tallies the number of estimates per tau and provides as output.  Used to compute weighted statistics.
	* video_msd.m: now computes weighted statistics so that the mean and error for the MSD are better influenced by the number of individual bead measures. 
	* plot_msd.m: also updated for new statistics measures and tweaked plots.
	* ve.m: changed to use the mean MSD as an imput instead of the individual MSD curves for each bead.  Takes advantage of weighted statistics to minimize bias/error.  Estimates error differently, now propagates max.min MSDs through the GSER function.
	* plot_ve.m: alse uses new stats measures and tweaked plots.
	
2010-09-30  Jeremy Cribb <jcribb@email.unc.edu>